--- a/B01C03/Bitacora_03_numpy.ipynb
+++ b/B01C03/Bitacora_03_numpy.ipynb
@@ -352,7 +352,7 @@
     "    if (edad >= 18):\n",
     "        # Agremos a la lista de mayores\n",
     "        lista_mayores.append(edad)\n",
-    "\n",
+    "    \n",
     "print(lista_mayores)"
    ]
   },
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +444,7 @@
     "numeros = [0,3,1,4,6,17,3,89,5,6,4,13,25,4,3,23,1,15,2]\n",
     "seleccionados = []\n",
     "for numero in numeros:\n",
-    "    if (numero >= 5) or (numero % 2 != 0):\n",
+    "    if (numero > 5) or (numero % 2 != 0):\n",
     "        seleccionados.append(numero)\n",
     "print(seleccionados)"
    ]
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -942,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -992,7 +992,7 @@
     "#np.zeros\n",
     "print(np.zeros((10)))\n",
     "print(np.zeros((1,10))) # un arregle de 10 elementos (1,10)\n",
-    "print(np.zeros((10,1))) # un arregle de 10 elementos (1,10)"
+    "print(np.zeros((10,1))) # un arregle de 10 elementos (10,1)"
    ]
   },
   {
@@ -1287,6 +1287,28 @@
    ],
    "source": [
     "print(np.min(un_arreglo), un_arreglo.min())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 6, 24, 42])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr1 = np.arange(9).reshape(3,3)\n",
+    "arr2 = np.arange(9).reshape(3,3)\n",
+    "arr1.sum(axis=1) + arr2.sum(axis=1)"
    ]
   },
   {
