--- a/B01C04/DS_Iris.ipynb
+++ b/B01C04/DS_Iris.ipynb
@@ -8,21 +8,26 @@
     "https://es.wikipedia.org/wiki/Conjunto_de_datos_flor_iris\n",
     "\n",
     "* ¿Quién y cuándo construyó este dataset?\n",
+    "\n",
     "Ronald Fisher en su artículo de 1936\n",
     "\n",
     "* ¿Qué es una flor iris?\n",
+    "\n",
     "Iris es un género de plantas rizomatosas de la familia Iridaceae\n",
     "\n",
     "* ¿Cuántas variables tiene?\n",
+    "\n",
     "El DS tiene seis variables\n",
     "\n",
     "* ¿Qué representa cada una?\n",
-    "Id: identificador de la muestra\n",
-    "SepalLengthCm: Largo del sepalo (en cm)\n",
-    "SepalWidthCm: Ancho del sepalo (en cm)\n",
-    "PetalLengthCm: Largo del petalo (en cm)\n",
-    "PetalWidthCm: Ancho del petalo (en cm)\n",
-    "Species: Especie\n",
+    "|Columna|Descripcion|\n",
+    "|---|------|\n",
+    "|Id| identificador de la muestra|\n",
+    "|SepalLengthCm| Largo del sepalo (en cm)|\n",
+    "|SepalWidthCm| Ancho del sepalo (en cm)|\n",
+    "|PetalLengthCm| Largo del petalo (en cm)|\n",
+    "|PetalWidthCm| Ancho del petalo (en cm)|\n",
+    "|Species| Especie|\n",
     "\n",
     "\n",
     "\n",
